.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Distributions__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Code__c</fullName>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_System_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is System Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Distribution</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <columns>NAME</columns>
        <columns>Incap311__Code__c</columns>
        <columns>Incap311__Name__c</columns>
        <columns>Incap311__Description__c</columns>
        <columns>Incap311__Is_System_Default__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>Distribution Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributions</pluralLabel>
    <recordTypes>
        <fullName>Incap311__Distribution_List</fullName>
        <active>true</active>
        <description>Collection of queue members that represent a distribution list</description>
        <label>Distribution List</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>